AUR-14 add identity endpoints
